--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
