--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "homepage": "https://gudivadarahul.github.io/myWordle",
   "name": "my-vue-app",
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -10,6 +13,7 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "zustand": "^4.0.0-rc.1"
